--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
-    "react-navigation": "^4.0.8"
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-swiper": "^1.5.14",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.8",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-promise-middleware": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
