--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.8",
+    "react-navigation-stack": "^1.9.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-promise-middleware": "^6.1.1"
