--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
-    "react-native": "0.60.5",
+    "react-localization": "^1.0.15",
+    "react-native": "^0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.8",
+    "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.9.0",
     "react-redux": "^7.1.1",
+    "reanimated": "^0.0.1-alpha",
     "redux": "^4.0.4",
-    "redux-promise-middleware": "^6.1.1"
+    "redux-form": "^8.2.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
