--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
     "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
@@ -19,6 +20,7 @@
     "react-navigation": "^4.0.8",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.9.0",
+    "react-navigation-tabs": "^2.5.5",
     "react-redux": "^7.1.1",
     "reanimated": "^0.0.1-alpha",
     "redux": "^4.0.4",
