--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "reanimated": "^0.0.1-alpha",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.1",
     "redux-thunk": "^2.3.0"
