--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "node ./android/fixAndroid/android-release-fix.js"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
