--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-imagepicker": "^2.0.0",
+    "react-native-modal": "^11.4.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.8",
